[package]
name = "yarr"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Real-time operating system targeting RISC-V architecture"
homepage = "https://github.com/jamolnng/yarr"
documentation = "https://github.com/jamolnng/yarr"
repository = "https://github.com/jamolnng/yarr"
readme = "README.md"
keywords = ["risc", "rtos"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "0.2.3"
hifive1 = { version = "0.10.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv = "0.9.0"
riscv-rt = "0.9.0"

[[bin]]
name = "yarr"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true