[package]
name = "yarr2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yarr2"
test = false
bench = false

[dependencies]
riscv = "0.10.1"
riscv-rt = "0.11.0"
embedded-hal = "0.2.3"
hifive1 = { version = "0.12.0", features = ["board-hifive1-revb"] }

[profile.release]
codegen-units = 1
debug = true
lto = true
