[package]
name = "yarr-common"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Toy real-time operating system"
homepage = "https://github.com/jamolnng/yarr"
documentation = "https://github.com/jamolnng/yarr"
repository = "https://github.com/jamolnng/yarr"
readme = "README.md"
keywords = ["riscv", "rtos"]
categories = ["embedded", "no-std"]

[dependencies]
num-traits = { version = "0.2.17", default_features = false }
