[package]
name = "yarr"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Real-time operating system targeting RISC-V architecture"
homepage = "https://github.com/jamolnng/yarr"
documentation = "https://github.com/jamolnng/yarr"
repository = "https://github.com/jamolnng/yarr"
readme = "README.md"
keywords = ["riscv", "rtos"]
categories = ["embedded", "no-std"]

[dependencies]
riscv = "0.9.0"
riscv-rt = "0.9.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"