[package]
name = "riscv-blinky-realtime"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "riscv-blinky-realtime"

[dependencies]
embedded-hal = "0.2.3"
hifive1 = { version = "0.12.0", features = ["board-hifive1-revb"] }
riscv = "0.10.1"
riscv-rt = "0.11.0"
yarr = { path = "../../../yarr", features = ["yarr-riscv"] }
